Second party :construction:

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,10 +35,10 @@
                     <a href="#Home" title="Home">Home</a>
                 </li>
                 <li>
-                    <a href="#Quem Somos" title="Quem Somos">Quem somos</a>
+                    <a href="#" title="Quem Somos">Quem somos</a>
                 </li>
                 <li>
-                    <a href="#Contato" title="Contato">Contato</a>
+                    <a href="#" title="Contato">Contato</a>
                 </li>
             </ul>
         </nav>
@@ -61,9 +61,40 @@
         <p>Selecione um ponto de entrega</p>
     </div>
 
+    <div class="trail">
+        <p class="title"><strong>Como Funciona</strong></p>
+        <img src="img/ICON.svg" class="first" />
+        <img src="img/Flecha 1.svg" class="seta1" />
+        <img src="img/Group 7.svg" class="two" />
+        <img src="img/Flecha 2.svg" class="seta2" />
+        <img src="img/Group 8.svg" class="tree" />
+    </div>
+
+    <div class="cadastro_escola">
+        <div class="back">
+            <p>Sua escola quer ser um ponto de distribuição e ajudar milhares de alunos?</p>
+            <button class="btn3" onclick="alert('Cadastrado!')">Cadastre sua escola aqui</button>
+            <img src="img/undraw_studying_s3l7 1.svg" class="girl_study" </div>
+            <img src="img/Group 16.svg" class="spots" />
+        </div>
+    </div>
+
+    <div class="testimony">
+        <img src="img/“.svg" alt="aspas_esq" class="aspas_esq">
+        <p>Depoimentos</p>
+        <img src="img/Vector.svg" class="balloon" />
+        <img src="img/CriançaParte.svg" class="children" />
+        <img src="img/“ 2.svg" alt="aspas_dir" class="aspas_dir">
+        <p>sadfjsdçkfjçasdfhjçafhsdçfhdçfkjsadkfjdskafdksahfçkjasdfçhsadfjsdçkfjçasdfhjçafhsdçfhdçfkjsadkfjdskafdksahfçkjasdfçhsadfjsdçkfjçasdfhjçafhsdçfhdçfkjsadkfjdskafdksahfçkjasdfçh
+        </p>
+        <p>Pedro Silva</p>
+        <p>açlksdfadshfdfçkldfjçdskjfaçkljsfdçkladsjfsadfjsdçkfjçasdfhjçafhsdçfhdçfkjsadkfjdskafdksahfçkjasdfçh</p>
+        <button class="btn4" onclick="alert('Feito')">Faça parte dessa história</button>
 </body>
 <footer class="rodape">
-    <p></p>
+    <p>Seja um amigo da escola</p>
+    <p>&copy; 2021 Empresa.</p>
+    <p>Todos os direitos reservados</p>
     <ul class="icones-sociais">
         <li><i class="fab fa-twitter"></i></li>
         <li><i class="fab fa-facebook-f"></i></li>
@@ -71,6 +102,8 @@
         <li><i class="fab fa-linkedin-in"></i></li>
         <li><i class="fab fa-youtube"></i></li>
     </ul>
+    <p>Privacidade</p>
+    <p>Termos de Uso</p>
 
 </footer>
 
