--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,107 +4,70 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport"
-        content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta name="keywords"
-        content="css4html, css+for+html, css 4 html, css4, css4 html, css, css3, html, html5, JS, JavaScript, TypeScript, TP" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/brands.min.css"
-        crossorigin="anonymous" />
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
-        crossorigin="anonymous"></script>
-
-    <title>DoeAmor</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/pecita" type="text/css" />
+    <title>Hackaton</title>
 </head>
 
 <body>
-    <header>
-        <h1 class="float-l">
-            <a href="#" title="Seja um amigo da escola">Seja um amigo da escola</a>
-        </h1>
-
-        <input type="checkbox" id="control-nav" />
-        <label for="control-nav" class="control-nav"></label>
-        <label for="control-nav" class="control-nav-close"></label>
-
-        <nav class="float-r">
-            <ul class="list-auto">
-                <li>
-                    <a href="#Home" title="Home">Home</a>
-                </li>
-                <li>
-                    <a href="#" title="Quem Somos">Quem somos</a>
-                </li>
-                <li>
-                    <a href="#" title="Contato">Contato</a>
-                </li>
-            </ul>
+    <div>
+        <!-- Menu -->
+        <nav>
+            <img src="img/Imagem menino.svg" class="men" />
+            <img src="img/Logo.svg" class="logo" />
+            <p class="text-logo">Fazendo o bem</p>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">QUEM SOMOS</a></li>
+                    <li><a href="#">CONTATO</a></li>
+                </ul>
+            </div>
+            <button class="btn-cadesc">CADASTRO DE ESCOLAS</button>
         </nav>
-    </header>
+        <div class="doe-mat">
+            <p>
+            <h1>Doe material escolar</h1>
+            </p>
+            <p>
+            <h2>Ajude crianças de todo pais a terem um futuro melhor</h2>
+            </p>
+            <button class="btn-doar">QUERO DOAR</button>
+            <button class="btn-pmat">PRECISO DE MATERIAL</button>
+        </div>
 
-    <section id="intro">
-        <img src="img/Imagem aluno.svg" class="float-r" />
-        <p>
-            <strong>Doe material escolar</strong>
-        <p>Ajude crianças de todo país a terem um futuro melhor.</p>
-        </p>
-        <button class="btn1" onclick="alert('Parabens pela iniciativa.')">Quero doar</button>
-        <button class="btn2" onclick="alert('Logo receberá o que precisa.')">Preciso de material</button>
-    </section>
+        <div class="point-dist">
+            <p>Encontre um ponto de distribuição</p>
+            <select name="cidade" class="cyt1">
+                <option value="cidade1">Cidade 1</option>
+                <option value="cidade2" selected>Cidade 2</option>
+                <option value="cidade3">Cidade 3</option>
+            </select>
+            <select name="cidade" class="cyt2">
+                <option value="cidade1" selected>Cidade 1</option>
+                <option value="cidade2">Cidade 2</option>
+                <option value="cidade3">Cidade 3</option>
+            </select>
 
-    <div id="busca">
-        <!-- Campo logo sera modificado por JS pois o efeito esperado nao é possivel sem JS. -->
-        <input type="text" id="txtBusca" placeholder="Buscar Estado..." />
-        <input type="text" id="txtBusca" placeholder="Buscar Cidade..." />
-        <p>Selecione um ponto de entrega</p>
-    </div>
-
-    <div class="trail">
-        <p class="title"><strong>Como Funciona</strong></p>
-        <img src="img/ICON.svg" class="first" />
-        <img src="img/Flecha 1.svg" class="seta1" />
-        <img src="img/Group 7.svg" class="two" />
-        <img src="img/Flecha 2.svg" class="seta2" />
-        <img src="img/Group 8.svg" class="tree" />
-    </div>
-
-    <div class="cadastro_escola">
-        <div class="back">
-            <p>Sua escola quer ser um ponto de distribuição e ajudar milhares de alunos?</p>
-            <button class="btn3" onclick="alert('Cadastrado!')">Cadastre sua escola aqui</button>
-            <img src="img/undraw_studying_s3l7 1.svg" class="girl_study" </div>
-            <img src="img/Group 16.svg" class="spots" />
+            <button class="button"><span>BUSCAR</span></button>
         </div>
     </div>
 
-    <div class="testimony">
-        <img src="img/“.svg" alt="aspas_esq" class="aspas_esq">
-        <p>Depoimentos</p>
-        <img src="img/Vector.svg" class="balloon" />
-        <img src="img/CriançaParte.svg" class="children" />
-        <img src="img/“ 2.svg" alt="aspas_dir" class="aspas_dir">
-        <p>sadfjsdçkfjçasdfhjçafhsdçfhdçfkjsadkfjdskafdksahfçkjasdfçhsadfjsdçkfjçasdfhjçafhsdçfhdçfkjsadkfjdskafdksahfçkjasdfçhsadfjsdçkfjçasdfhjçafhsdçfhdçfkjsadkfjdskafdksahfçkjasdfçh
-        </p>
-        <p>Pedro Silva</p>
-        <p>açlksdfadshfdfçkldfjçdskjfaçkljsfdçkladsjfsadfjsdçkfjçasdfhjçafhsdçfhdçfkjsadkfjdskafdksahfçkjasdfçh</p>
-        <button class="btn4" onclick="alert('Feito')">Faça parte dessa história</button>
-</body>
-<footer class="rodape">
-    <p>Seja um amigo da escola</p>
-    <p>&copy; 2021 Empresa.</p>
-    <p>Todos os direitos reservados</p>
-    <ul class="icones-sociais">
-        <li><i class="fab fa-twitter"></i></li>
-        <li><i class="fab fa-facebook-f"></i></li>
-        <li><i class="fab fa-instagram"></i></li>
-        <li><i class="fab fa-linkedin-in"></i></li>
-        <li><i class="fab fa-youtube"></i></li>
-    </ul>
-    <p>Privacidade</p>
-    <p>Termos de Uso</p>
+    <!-- Imagem centro -->
+    <div>
 
-</footer>
+
+    </div>
+
+    <!-- Busca -->
+    <div>
+
+    </div>
+
+</body>
 
 </html>
