Alterações no frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 
-    <title>Hackaton</title>
+    <title>Hackathon</title>
 </head>
 
 <body>
