Criação de outras páginas html
Alteração também na landing-page

--- a/frontend/landing-page.html
+++ b/frontend/landing-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -66,6 +66,12 @@
     <!-- Busca -->
     <div>
 
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js">
+            document.getElementsByClassName("btn-doar").addEventListener("click", () => {
+                location.href = "cadastrar-usuarios.html";
+            });
+
+        </script>
 </body>
 
 </html>
