Alterações em /cadastrar-usuario

--- a/frontend/cadastrar-usuario.html
+++ b/frontend/cadastrar-usuario.html
@@ -18,7 +18,7 @@
             <p class="text-logo-branco">Fazendo o Bem</p>
             <div class="menu">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="landing-page.html">HOME</a></li>
                     <li><a href="#">QUEM SOMOS</a></li>
                     <li><a href="#">CONTATO</a></li>
                 </ul>
@@ -52,6 +52,15 @@
     </div>
     </div>
 </body>
+<footer>
+    <div>
+        <span class="footer">
+            <img src="img/Logo.svg">
+            <p class="text-logo-branco">Fazendo o Bem</p>
+        </span>
+
+    </div>
+</footer>
 <script>
 
 </script>
