--- a/frontend/landing-page.html
+++ b/frontend/landing-page.html
@@ -22,12 +22,12 @@
             <p class="text-logo">Fazendo o bem</p>
             <div class="menu">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="landing-page.html">HOME</a></li>
                     <li><a href="#">QUEM SOMOS</a></li>
                     <li><a href="#">CONTATO</a></li>
                 </ul>
             </div>
-            <button class="btn-cadesc">CADASTRO DE ESCOLAS</button>
+            <button class="btn-cadesc"><a href="cadastrar-escola.html">CADASTRO DE ESCOLAS</button></a>
         </nav>
         <div class="doe-mat">
             <p>
@@ -37,7 +37,7 @@
             <h2>Ajude crianças de todo pais a terem um futuro melhor</h2>
             </p>
             <button class="btn-doar">QUERO DOAR</button>
-            <button class="btn-pmat">PRECISO DE MATERIAL</button>
+            <button class="btn-pmat"><a href="cadastrar-usuario.html">PRECISO DE MATERIAL</button></a>
         </div>
 
         <div class="point-dist">
@@ -66,9 +66,9 @@
     <!-- Busca -->
     <div>
 
-        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js">
+        <script src="/frontend/script.js">
             document.getElementsByClassName("btn-doar").addEventListener("click", () => {
-                location.href = "cadastrar-usuarios.html";
+
             });
 
         </script>
