--- a/frontend/cadastrar-escola.html
+++ b/frontend/cadastrar-escola.html
@@ -35,25 +35,25 @@
         <img class="mochila" src="img/aluno-mochila.svg">
         <div class="form">
             <p>
-            <form id="userForm">
+            <form id="schoolForm">
                 <label for="userCNPJ">CNPJ</label><br>
                 <input type="text" id="CNPJ"><br>
-                <label for="school_name">Razão Social</label><br>
-                <input type="text" id="school_name"><br>
-                <label for="nome_fantasia">Nome Fantasia</label><br>
-                <input type="text" id="nome_fantasia"><br>
-                <label for="schoolAddress">Endereço</label><br>
-                <input type="text" id="schoolAddress"></input><br>
+                <label for="razao">Razão Social</label><br>
+                <input type="text" id="razao"><br>
+                <label for="fantasia">Nome Fantasia</label><br>
+                <input type="text" id="fantasia"><br>
+                <label for="address">Endereço</label><br>
+                <input type="text" id="address"></input><br>
                 <label for="kit">Escolha o kit que precisa</label><br>
-                <select id="kits" name="cars">
-                    <option value="volvo">Kit Ensino Fundamental I</option>
-                    <option value="saab">Kit Ensino Fundamental II</option>
-                    <option value="fiat">Kit Ensino Médio</option>
+                <select id="kit" name="cars">
+                    <option value="EF1">Kit Ensino Fundamental I</option>
+                    <option value="EF2">Kit Ensino Fundamental II</option>
+                    <option value="EM">Kit Ensino Médio</option>
                 </select>
                 <label for="qt">Quantidade de Kits</label><br>
                 <input type="number" id="qt" min="1" max="20"></input><br>
-                <label for="schoolPhone">Telefone</label><br>
-                <input type="text" id="schoolPhone"></input><br>
+                <label for="phone">Telefone</label><br>
+                <input type="text" id="phone"></input><br>
                 <input type="submit" id="enviar">Enviar</input>
             </form>
             </p>
