Alterações na página cadastrar-escola

--- a/frontend/cadastrar-escola.html
+++ b/frontend/cadastrar-escola.html
@@ -45,11 +45,7 @@
                 <label for="address">Endereço</label><br>
                 <input type="text" id="address"></input><br>
                 <label for="kit">Escolha o kit que precisa</label><br>
-                <select id="kit" name="cars">
-                    <option value="EF1">Kit Ensino Fundamental I</option>
-                    <option value="EF2">Kit Ensino Fundamental II</option>
-                    <option value="EM">Kit Ensino Médio</option>
-                </select>
+                <select id="kit"></select>
                 <label for="qt">Quantidade de Kits</label><br>
                 <input type="number" id="qt" min="1" max="20"></input><br>
                 <label for="phone">Telefone</label><br>
