--- a/frontend/landing-page.html
+++ b/frontend/landing-page.html
@@ -36,7 +36,7 @@
             <p>
             <h2>Ajude crianças de todo pais a terem um futuro melhor</h2>
             </p>
-            <button class="btn-doar">QUERO DOAR</button>
+            <button class="btn-doar"><a href="doar.html">QUERO DOAR</a></button>
             <button class="btn-pmat"><a href="cadastrar-usuario.html">PRECISO DE MATERIAL</button></a>
         </div>
 
