Alterações no front e backend
- Alteração nas migrations para que sejam criadas entidades basicas para uso do site;
- Alterações em páginas HTML para incluir entidades;
- Alterações no CSS

--- a/frontend/cadastrar-escola.html
+++ b/frontend/cadastrar-escola.html
@@ -29,10 +29,10 @@
     <div class="corpo-form">
         <div class="subtitulo">
             <p>
-            <h1>Olá, Aluno!</p>
-            </h1></br>Preencha seus dados para solicitar material escolar.</p>
+            <h1>Torne-se um ponto de distribuição</p>
+            </h1></br>E ajude milhares de alunos!</p>
         </div>
-        <img class="mochila" src="img/aluno-mochila.svg">
+        <img class="mochila" src="img/Ilustraçãoescola.svg">
         <div class="form">
             <p>
             <form id="schoolForm">
@@ -59,5 +59,12 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 <script src="./scripts/cadastrar-escola.js"></script>
+<footer>
+    <span class="foot-box"></span>
+    <div class="direitos">
+        © 2021 Squad 36 - Programa de Formação FCamara<br>Todos os direitos reservados
+    </div>
+    <div class="socialmedia"><img src="./img/social mediasm.svg"></div>
+</footer>
 
 </html>
