--- a/frontend/cadastrar-usuario.html
+++ b/frontend/cadastrar-usuario.html
@@ -44,8 +44,8 @@
                 <input type="text" id="userPhone"><br>
                 <label for="userReg">Numero de matrícula</label><br>
                 <input type="text" id="userReg"></input><br>
-                <label for="userSchool">Nome da Instituição</label><br>
-                <input type="text" id="userSchool"></input><br>
+                <label for="inst">Nome da instituição</label><br>
+                <select id="inst"></select><br>
                 <input type="submit" id="enviar">Enviar</input>
             </form>
             </p>
@@ -55,5 +55,13 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 <script src="./scripts/cadastrar-usuario.js"></script>
+
+<footer>
+    <span class="foot-box"></span>
+    <div class="direitos">
+        © 2021 Squad 36 - Programa de Formação FCamara<br>Todos os direitos reservados
+    </div>
+    <div class="socialmedia"><img src="./img/social mediasm.svg"></div>
+</footer>
 
 </html>
