--- a/frontend/doar.html
+++ b/frontend/doar.html
@@ -33,7 +33,7 @@
             </h1></br>Falta pouco para você deixar um aluno feliz!<br>Preencha os campos ao lado e escolha um kit para
             doar.</p>
         </div>
-        <img class="mochila" src="img/aluno-mochila.svg">
+        <img class="mochila" src="img/ilustraçãodoador.svg">
         <div class="form">
             <p>
             <form id="schoolForm">
@@ -70,5 +70,13 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 <script src="./scripts/doar.js"></script>
+
+<footer>
+    <span class="foot-box"></span>
+    <div class="direitos">
+        © 2021 Squad 36 - Programa de Formação FCamara<br>Todos os direitos reservados
+    </div>
+    <div class="socialmedia"><img src="./img/social mediasm.svg"></div>
+</footer>
 
 </html>
