Alterações em landing-page

--- a/frontend/landing-page.html
+++ b/frontend/landing-page.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 
-    <title>Hackaton</title>
+    <title>Fazendo o bem</title>
 </head>
 
 <body>
@@ -36,8 +36,8 @@
             <p>
             <h2>Ajude crianças de todo pais a terem um futuro melhor</h2>
             </p>
-            <button class="btn-doar">QUERO DOAR</button>
-            <button class="btn-pmat">PRECISO DE MATERIAL</button>
+            <button class="btn-doar"><a href="doar.html">QUERO DOAR</button></a>
+            <button class="btn-pmat"><a href="cadastrar-usuario.html">PRECISO DE MATERIAL</button></a>
         </div>
 
         <div class="point-dist">
