--- a/frontend/landing-page.html
+++ b/frontend/landing-page.html
@@ -27,7 +27,7 @@
                     <li><a href="#">CONTATO</a></li>
                 </ul>
             </div>
-            <button class="btn-cadesc">CADASTRO DE ESCOLAS</button>
+            <button class="btn-cadesc"><a href="cadastrar-escola.html">CADASTRO DE ESCOLAS</button></a>
         </nav>
         <div class="doe-mat">
             <p>
